--- a/package.json
+++ b/package.json
@@ -54,5 +54,5 @@
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.17"
   },
-  "homepage": "https://parkchansaem.io/react-for-cointracker"
+  "homepage": "https://parkchansaem.github.io/react-for-cointracker"
 }
